add videos & refractor

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="renderer/Pixel.js"></script>
     <script src="renderer/Shape.js"></script>
     <script src="renderer/Buffer.js"></script>
+    <script src="utils/utils.js" defer></script>
+    <script src="utils/draw.js" defer></script>
     <script src="objects/PerspectiveCamera.js" defer></script>
     <script src="index.js" defer></script>
 </head>
@@ -21,21 +23,5 @@
 
 </div>
 <div id="buffer-container"></div>
-<div id="parent"></div>
-<!--<div id='parent'>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    &nbsp;-->
-<!--    <span style="color:white; background:black"> </span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <br>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--    <span style="color:white; background:black">-</span>-->
-<!--</div>-->
 </body>
 </html>
